test/pass/pass_8.prsl
// RUN: %edir/prsl --codegen %s -o pass_8.ll
// RUN: clang++ -Wno-override-module pass_8.ll -o pass_8
// RUN: %S/pass_8 | filecheck %s --match-full-lines
// RUN: %edir/prsl %s | filecheck %s --match-full-lines
// CHECK: 89
// CHECK-NEXT: 144

fibonacci = func(x) : fib {
    res = 1;
    if (x > 1) {
        res = fib(x - 1) + fib(x - 2);
    }
    res;
}

print fibonacci(10);
print fib(11);